<resources>
    <!-- Name of the app -->
    <string name="app_name">ITC Quiz</string>

    <!-- First question -->
    <string name="question_no1">Real time protection of a computer against viruses and malitios atacks ca be done by:</string>
    <!-- answers for the First question -->
    <string name="question1_answ1">Disk Cleanup</string>
    <string name="question1_answ2">Scan Disk</string>
    <string name="question1_answ3">Anti Spyware and Antivirus software</string>
    <string name="question1_answ4">Disk Management</string>
    <string name="numerotation1">1/10</string>

    <!-- Second question -->
    <string name="question_no2">Which one is an Operating System?</string>
    <!-- answers for the Second question -->
    <string name="question2_answ1">Google Chrome</string>
    <string name="question2_answ2">Internet Explorer</string>
    <string name="question2_answ3">Windows 7</string>
    <string name="question2_answ4">Opera</string>
    <string name="numerotation2">2/10</string>

    <!-- Third question -->
    <string name="question_no3">Chose the device used to store data.</string>
    <!-- answers for the Third question -->
    <string name="question3_answ1">Hard Disk Drive</string>
    <string name="question3_answ2">Monitor</string>
    <string name="question3_answ3">Scanner</string>
    <string name="question3_answ4">Joystick</string>
    <string name="numerotation3">3/10</string>

    <!-- Fourth question -->
    <string name="question_no4">Choose image file extensions.</string>
    <!-- answers for the Fourth question -->
    <string name="question4_answ1">.jpg</string>
    <string name="question4_answ2">.pdf</string>
    <string name="question4_answ3">.png</string>
    <string name="question4_answ4">.pptx</string>
    <string name="numerotation4">4/10</string>

    <!-- Fifth question -->
    <string name="question_no5">Write a multiple of Byte!</string>
    <string name="question5_answer">_ _</string>
    <string name="numerotation5">5/10</string>

    <!-- Sixth question -->
    <string name="question_no6">What is the measure unit of memory? </string>
    <!-- answers for the Sixth question -->
    <string name="question6_answ1">RAM</string>
    <string name="question6_answ2">Byte</string>
    <string name="question6_answ3">File</string>
    <string name="question6_answ4">Hz</string>
    <string name="numerotation6">6/10</string>

    <!-- Seventh question -->
    <string name="question_no7">Choose email addresses with wrong syntax.</string>
    <!-- answers for the Seventh question -->
    <string name="question7_answ1">ana@lugojana@yahoo.com</string>
    <string name="question7_answ2">anutza.gmail.com</string>
    <string name="question7_answ3">ana.lugojana@yahoo.com</string>
    <string name="question7_answ4">office@portal.ro</string>
    <string name="numerotation7">7/10</string>

    <!-- Egth question -->
    <string name="question_no8">Choose applications used to navigate on internet.</string>
    <!-- answers for the Eigth question -->
    <string name="question8_answ1">Mozilla Firefox</string>
    <string name="question8_answ2">WordPad</string>
    <string name="question8_answ3">Opera</string>
    <string name="question8_answ4">Internet Explorer</string>
    <string name="numerotation8">8/10</string>

    <!-- Ninth question -->
    <string name="question_no9">Choose URLs with correct syntax.</string>
    <!-- answers for the Ninth question -->
    <string name="question9_answ1">http://www.google.ro</string>
    <string name="question9_answ2">http://www.ismb.edu.ro/index.php</string>
    <string name="question9_answ3">ftp://select.edu.ro</string>
    <string name="question9_answ4">http:\math.com</string>
    <string name="numerotation9">9/10</string>

    <!-- Tenth question -->
    <string name="question_no10">In SPAM folder of a Mail Application are stored &#8230;</string>
    <!-- answers for the Tenth question -->
    <string name="question10_answ1">messages marked for delete</string>
    <string name="question10_answ2">messages edited and not sent</string>
    <string name="question10_answ3">unwanted commercial messages</string>
    <string name="question10_answ4">copies of sent messages</string>
    <string name="numerotation10">10/10</string>

    <!-- the text for the Next, Previous and Finish buttons -->
    <string name="nextButton">Next</string>
    <string name="previousButton">Back</string>
    <string name="finishButton">Finish</string>

    <!-- the text for Alert on -->
    <string name="alertTitle">Exit</string>
    <string name="alertQuestion">Want to exit the Quiz App?</string>

    <!-- Elements of the Splash Screen -->
    <string name="nameEditTextHint">Your name</string>
    <string name="startButton">Start</string>
    <string name="imageDescription">App logo</string>

</resources>
